--- a/Restaurant Menu/style.css
+++ b/Restaurant Menu/style.css
@@ -34,34 +34,26 @@ body{
     justify-content: space-evenly;
 }
 .menu-btn{
-    font-family: var(--Inter);
+    font-family: var(--Kaushan);
     font-size: 1.1rem;
     font-weight: 600;
-    text-transform: uppercase;
-    background: none;
+    font-size: 23px;
+    background-color: transparent;
     border: none;
     color: #ff9505;
     display: block;
     cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
-.menu-btn.active-btn {
-    transform: scale(1.2);
-    transition: all 0.3s ease;
+.menu-btn:hover{
+    border-radius: 15px;
+    background-color: whitesmoke;
+    
+    transform: scale(1.3);
 }
-.menu-btn.active-btn::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0%;
-    height: 2px;
-    background-color: orange;
-    transition: all 0.3s ease;
-}
-  
-.menu-btn.active-btn:hover::after {
-    width: 100%;
+.menu-btn:focus{
+    text-decoration: underline;
+    transform: scale(1.3);
 }
 .food-items{
     margin: 20px auto;
@@ -111,7 +103,7 @@ body{
     font-weight: 500;
 }
   
-@media screen and (min-width: 600px){
+@media screen and (min-width: 390px){
     .food-item{
         display: grid;
         grid-template-columns: 25% auto;
