added cart button and its features

--- a/Restaurant Menu/style.css
+++ b/Restaurant Menu/style.css
@@ -150,3 +150,14 @@ button:hover{
         column-gap: 2rem;
     }
 }
+.cart-popup {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 400px;
+    height: 400px;
+    background-color: rgb(191, 218, 53);
+    border: 1px solid black;
+    z-index: 99;
+}
