--- a/Restaurant Menu/style.css
+++ b/Restaurant Menu/style.css
@@ -18,6 +18,9 @@ body{
     justify-content: space-between;
 }
 .menu-head img{
+    position: fixed;
+    right: 10px;
+    z-index: 99;
     transition: all 0.5s ease;
     width: 40px;
     height: 40px;
@@ -153,21 +156,54 @@ button:hover{
 .cart-popup {
     display: none;
     position: fixed;
+    background: linear-gradient(135deg,  #8673a3, purple);
     top: 50px;
     right: 50px;
     width: 450px;
     height: 400px;
-    background-color: #8673a3;
-    border: 1px solid red;
+    border: none;
+    border-radius: 30px;
     z-index: 99;
+    overflow-y: auto;
 }
 .cart-single-item{
+    margin: auto;
     display: flex;
     padding: 6px;
 }
 .remove-item{
-    padding-right: 10px;
+    margin-left: 5px;
+    background: red;
+    font-size: 15px;
+}
+.remove-item:hover{
+    background: darkred;
 }
 .item-total{
+    font-size: 25px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
+}
+.cart-actions{
+    display: flex;
+    justify-content: center;
+}
+.cart-actions button{
+    background: white;
+    color: #44355b;
+    font-size: 20px;
+}
+.popup-modal{
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 25%;
+    z-index: 200;
+    max-width: 600px;
+    padding: 30px;
+    margin: auto;
+    background-color: #fff;
 }
